<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- Name for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Inventory App</string>

    <!-- Label for overflow menu option that deletes all products data in the app. [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete all products</string>

    <!-- Title text for the empty view. [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">No product here&#8230;</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product. [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product.</string>

    <!-- Title for the activity to add a new product. [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a product</string>

    <!-- Title for the activity to edit an existing product. [CHAR LIMIT=20] -->
    <string name="editor_activity_title_detail_product">Detail product</string>

    <!-- Label for editor menu option to save product and leave editor. [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product. [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new product has been successfully inserted. [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved.</string>

    <!-- Toast message in editor when new product has failed to be inserted. [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product.</string>

    <!-- Toast message in editor when current product was successfully updated. [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated.</string>

    <!-- Toast message in editor when current product has failed to be updated. [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product.</string>

    <string name="editor_save_product_missing">Please fill in all fields.</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes. [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing ?</string>

    <!-- Dialog button text for the option to discard a user's changes. [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product. [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep editing</string>

    <!-- Toast message in editor when current product was successfully deleted. [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted.</string>

    <!-- Toast message in editor when current product has failed to be deleted. [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product.</string>

    <!-- Dialog message to ask the user to confirm deleting the current product. [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product ?</string>

    <!-- Dialog button text for the option to confirm deleting the current product. [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product. [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for name category of attributes in the editor. [CHAR LIMIT=30] -->
    <string name="category_name">Name</string>

    <!-- Label for quantity information in the editor. [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Label for price information in the editor. [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>

    <!-- Label for picture information in the editor. [CHAR LIMIT=30] -->
    <string name="category_picture">Picture</string>

    <!-- Text hint for name field in the editor. [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for quantity field in the editor. [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">Quantity</string>

    <!-- Text hint for price field in the editor. [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price</string>

    <!-- Units for price of the product (euros). [CHAR LIMIT=5] -->
    <string name="unit_product_price">€</string>

    <string name="button_upload_picture">Upload picture</string>

    <string name="product_price">%1$s €</string>

    <string name="sale_product">Sale</string>

    <string name="order_product">Order</string>

    <string name="supplier_email">pfs@pfs-france.com</string>
</resources>
